fixed some layout issues with Form module (combination with Output-filter)
git-svn-id: svn://isteam.dynxs.de/wb_svn/wb280/trunk@789 98bf1eab-f5fc-0310-a3ed-aac8851f7404

--- a/wb/admin/interface/stylesheet.css
+++ b/wb/admin/interface/stylesheet.css
@@ -86,7 +86,7 @@ label {
 	background-color: #ECF3F7;
 }
 .row_b {
-	background-color: #EBF7FC;
+	background-color: #DBEBF2;
 }
 .hide {
 	display: none;
